charts/recommend-coffee/charts/api-gateway/envoy.yml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  virtual_hosts:
                    - name: ingress
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/customermanagement"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/v1.0/invoke/customermanagement/method/"
                            cluster: dapr
  clusters:
    - name: dapr
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: dapr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3500
